css alignments to prevent override layouts for a site

--- a/views/css/sample.css
+++ b/views/css/sample.css
@@ -1,26 +1,7 @@
-@-webkit-keyframes spinAround {
-  from {
-    -webkit-transform: rotate(0deg);
-            transform: rotate(0deg);
-  }
-  to {
-    -webkit-transform: rotate(359deg);
-            transform: rotate(359deg);
-  }
-}
-@keyframes spinAround {
-  from {
-    -webkit-transform: rotate(0deg);
-            transform: rotate(0deg);
-  }
-  to {mobile
-    -webkit-transform: rotate(359deg);
-            transform: rotate(359deg);
-  }
-}
+
 
 img.payRightimg{
-  height: auto;ƒ
+  height: auto;
   max-width: 100%;
 }
 
@@ -39,30 +20,13 @@ img.payRightimg{
 
 }
 
-
-
-body,
-button,
-input,
-select,
-textarea {
-  font-family: BlinkMacSystemFont, -apple-system, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
-}
-
-
-span {
-  font-style: inherit;
-  font-weight: inherit;
-}
-
-body,
 p,
 h1.payRightH1,
 h2.payRightH2,
 h3.payRightH3,
 h4.payRightH4,
 h5.payRightH5,
-h6.payRightH6,
+h6.payRightH6
  {
   margin: 0;
   padding: 0;
@@ -79,12 +43,9 @@ h6.payRightH6,
   background-color: green;
 
 }
-*, *::before, *::after {
+/* *, *::before, *::after {
   box-sizing: inherit;
-}
-
-html
-{min-width: 300px;}
+} */
 
 
 /* payRight_container */
@@ -383,7 +344,6 @@ a.tellmemore {
   }
 .insideColumns.payRight_is-3-tablet, .payRight_is-3-tablet {
   flex: none;
-  /*check*/
    margin-left: 25%;
     width: 25%
   }
